fixed a lot of things with @uros998